@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.jps.incremental.java;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -23,13 +9,14 @@ import com.intellij.openapi.util.io.FileFilters;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.ExceptionUtil;
-import com.intellij.util.SystemProperties;
 import com.intellij.util.concurrency.Semaphore;
 import com.intellij.util.concurrency.SequentialTaskExecutor;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.JBIterable;
+import com.intellij.util.containers.SmartHashSet;
 import com.intellij.util.execution.ParametersListUtil;
 import com.intellij.util.io.PersistentEnumeratorBase;
+import com.intellij.util.lang.JavaVersion;
 import gnu.trove.THashMap;
 import gnu.trove.THashSet;
 import org.jetbrains.annotations.NotNull;
@@ -56,7 +43,6 @@ import org.jetbrains.jps.incremental.messages.ProgressMessage;
 import org.jetbrains.jps.javac.*;
 import org.jetbrains.jps.model.JpsDummyElement;
 import org.jetbrains.jps.model.JpsProject;
-import org.jetbrains.jps.model.java.JavaModuleIndex;
 import org.jetbrains.jps.model.java.JpsJavaExtensionService;
 import org.jetbrains.jps.model.java.JpsJavaSdkType;
 import org.jetbrains.jps.model.java.LanguageLevel;
@@ -75,8 +61,14 @@ import java.io.FileFilter;
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.util.*;
-import java.util.concurrent.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.Executor;
+import java.util.concurrent.Future;
+import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
+
+import static com.intellij.openapi.util.Pair.pair;
 
 /**
  * @author Eugene Zhuravlev
@@ -90,16 +82,17 @@ public class JavaBuilder extends ModuleLevelBuilder {
   public static final Key<Boolean> IS_ENABLED = Key.create("_java_compiler_enabled_");
   public static final FileFilter JAVA_SOURCES_FILTER = FileFilters.withExtension(JAVA_EXTENSION);
 
-  private static final Key<Integer> JAVA_COMPILER_VERSION_KEY = GlobalContextKey.create("_java_compiler_version_");
   private static final Key<Boolean> PREFER_TARGET_JDK_COMPILER = GlobalContextKey.create("_prefer_target_jdk_javac_");
   private static final Key<JavaCompilingTool> COMPILING_TOOL = Key.create("_java_compiling_tool_");
   private static final Key<ConcurrentMap<String, Collection<String>>> COMPILER_USAGE_STATISTICS = Key.create("_java_compiler_usage_stats_");
   private static final List<String> COMPILABLE_EXTENSIONS = Collections.singletonList(JAVA_EXTENSION);
 
   private static final Set<String> FILTERED_OPTIONS = ContainerUtil.newHashSet(
-    "-target");
+    "-target"
+  );
   private static final Set<String> FILTERED_SINGLE_OPTIONS = ContainerUtil.newHashSet(
-    "-g", "-deprecation", "-nowarn", "-verbose", "-proc:none", "-proc:only", "-proceedOnError");
+    "-g", "-deprecation", "-nowarn", "-verbose", "-proc:none", "-proc:only", "-proceedOnError"
+  );
 
   private static final List<ClassPostProcessor> ourClassProcessors = new ArrayList<>();
   private static final Set<JpsModuleType<?>> ourCompilableModuleTypes = new HashSet<>();
@@ -121,6 +114,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     ourDefaultRtJar = rtJar;
   }
 
+
   public static void registerClassPostProcessor(ClassPostProcessor processor) {
     ourClassProcessors.add(processor);
   }
@@ -129,7 +123,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
 
   public JavaBuilder(Executor tasksExecutor) {
     super(BuilderCategory.TRANSLATOR);
-    myTaskRunner = new SequentialTaskExecutor("JavaBuilder pool", tasksExecutor);
+    myTaskRunner = SequentialTaskExecutor.createSequentialApplicationPoolExecutor("JavaBuilder Pool", tasksExecutor);
     //add here class processors in the sequence they should be executed
   }
 
@@ -222,16 +216,11 @@ public class JavaBuilder extends ModuleLevelBuilder {
         return true;
       });
 
-
       int javaModulesCount = 0;
       if ((!filesToCompile.isEmpty() || dirtyFilesHolder.hasRemovedFiles()) &&
-          JpsJavaSdkType.parseVersion(getLanguageLevel(ContainerUtil.getFirstItem(chunk.getModules()))) >= 9) {
-        // at the moment, there is no incremental compilation for module-info files, so they should be rebuilt on every change
-        JavaModuleIndex index = getJavaModuleIndex(context);
+          getTargetPlatformLanguageVersion(chunk.representativeTarget().getModule()) >= 9) {
         for (ModuleBuildTarget target : chunk.getTargets()) {
-          File moduleInfoFile = index.getModuleInfoFile(target.getModule(), target.isTests());
-          if (moduleInfoFile != null) {
-            filesToCompile.add(moduleInfoFile);
+          if (JavaBuilderUtil.findModuleInfoFile(context, target) != null) {
             javaModulesCount++;
           }
         }
@@ -259,7 +248,9 @@ public class JavaBuilder extends ModuleLevelBuilder {
     catch (Exception e) {
       LOG.info(e);
       String message = e.getMessage();
-      if (message == null) message = "Internal error: \n" + ExceptionUtil.getThrowableText(e);
+      if (message == null || message.trim().isEmpty()) {
+        message = "Internal error: \n" + ExceptionUtil.getThrowableText(e);
+      }
       context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, message));
       throw new StopBuildException();
     }
@@ -327,25 +318,21 @@ public class JavaBuilder extends ModuleLevelBuilder {
             compiledOk = compileJava(context, chunk, files, classpath, platformCp, srcPath, diagnosticSink, outputSink, compilingTool, hasModules);
           }
           finally {
-            // heuristic: incorrect paths data recovery, so that the next make should not contain non-existing sources in 'recompile' list
             filesWithErrors = diagnosticSink.getFilesWithErrors();
-            for (File file : filesWithErrors) {
-              if (!file.exists()) {
-                FSOperations.markDeleted(context, file);
-              }
-            }
           }
         }
 
         context.checkCanceled();
 
         if (!compiledOk && diagnosticSink.getErrorCount() == 0) {
+          // unexpected exception occurred or compiler did not output any errors for some reason
           diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, "Compilation failed: internal java compiler error"));
         }
+        if (diagnosticSink.getErrorCount() > 0) {
+          diagnosticSink.report(new JpsInfoDiagnostic("Errors occurred while compiling module '" + chunkName + "'"));
+        }
+
         if (!Utils.PROCEED_ON_ERROR_KEY.get(context, Boolean.FALSE) && diagnosticSink.getErrorCount() > 0) {
-          if (!compiledOk) {
-            diagnosticSink.report(new JpsInfoDiagnostic("Errors occurred while compiling module '" + chunkName + "'"));
-          }
           throw new StopBuildException(
             "Compilation failed: errors: " + diagnosticSink.getErrorCount() + "; warnings: " + diagnosticSink.getWarningCount()
           );
@@ -372,30 +359,30 @@ public class JavaBuilder extends ModuleLevelBuilder {
                               DiagnosticOutputConsumer diagnosticSink,
                               OutputFileConsumer outputSink,
                               JavaCompilingTool compilingTool,
-                              boolean hasModules) throws Exception {
-    Semaphore counter = new Semaphore();
+                              boolean hasModules) {
+    final Semaphore counter = new Semaphore();
     COUNTER_KEY.set(context, counter);
-
-    final JpsJavaExtensionService javaExt = JpsJavaExtensionService.getInstance();
-    final JpsJavaCompilerConfiguration compilerConfig = javaExt.getCompilerConfiguration(context.getProjectDescriptor().getProject());
-    assert compilerConfig != null;
 
     final Set<JpsModule> modules = chunk.getModules();
     ProcessorConfigProfile profile = null;
+
     if (modules.size() == 1) {
+      final JpsJavaCompilerConfiguration compilerConfig =
+        JpsJavaExtensionService.getInstance().getCompilerConfiguration(context.getProjectDescriptor().getProject());
+      assert compilerConfig != null;
       profile = compilerConfig.getAnnotationProcessingProfile(modules.iterator().next());
     }
     else {
-      String message = validateCycle(chunk, javaExt, compilerConfig, modules);
+      final String message = validateCycle(context, chunk);
       if (message != null) {
         diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, message));
-        return true;
+        return false;
       }
     }
 
     final Map<File, Set<File>> outs = buildOutputDirectoriesMap(context, chunk);
     try {
-      final int targetLanguageLevel = JpsJavaSdkType.parseVersion(getLanguageLevel(chunk.getModules().iterator().next()));
+      final int targetLanguageLevel = getTargetPlatformLanguageVersion(chunk.representativeTarget().getModule());
       final boolean shouldForkJavac = shouldForkCompilerProcess(context, chunk, targetLanguageLevel);
 
       // when forking external javac, compilers from SDK 1.6 and higher are supported
@@ -405,13 +392,18 @@ public class JavaBuilder extends ModuleLevelBuilder {
         if (forkSdk == null) {
           String text = "Cannot start javac process for " + chunk.getName() + ": unknown JDK home path.\nPlease check project configuration.";
           diagnosticSink.report(new PlainMessageDiagnostic(Diagnostic.Kind.ERROR, text));
-          return true;
+          return false;
         }
       }
 
-      final int compilerSdkVersion = forkSdk == null? getCompilerSdkVersion(context) : forkSdk.getSecond();
+      final int compilerSdkVersion = forkSdk == null ? JavaVersion.current().feature : forkSdk.getSecond();
 
-      final List<String> options = getCompilationOptions(compilerSdkVersion, context, chunk, profile, compilingTool);
+      final Pair<List<String>, List<String>> vm_compilerOptions = getCompilationOptions(
+        compilerSdkVersion, context, chunk, profile, compilingTool
+      );
+      final List<String> vmOptions = vm_compilerOptions.first;
+      final List<String> options = vm_compilerOptions.second;
+
       if (LOG.isDebugEnabled()) {
         String mode = shouldForkJavac ? "fork" : "in-process";
         LOG.debug("Compiling chunk [" + chunk.getName() + "] with options: \"" + StringUtil.join(options, " ") + "\", mode=" + mode);
@@ -423,7 +415,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
                       " differs from javac's platform (" + System.getProperty("java.version") + ")\n" +
                       "Compilation profiles are not supported for such configuration";
         context.processMessage(new CompilerMessage(BUILDER_NAME, BuildMessage.Kind.ERROR, text));
-        return true;
+        return false;
       }
 
       Collection<File> classPath = originalClassPath;
@@ -437,30 +429,16 @@ public class JavaBuilder extends ModuleLevelBuilder {
       }
 
       if (!platformCp.isEmpty()) {
-        final int chunkSdkVersion;
         if (hasModules) {
           modulePath = JBIterable.from(platformCp).append(modulePath).toList();
           platformCp = Collections.emptyList();
         }
-        else if ((chunkSdkVersion = getChunkSdkVersion(chunk)) >= 9) {
+        else if ((getChunkSdkVersion(chunk)) >= 9) {
           // if chunk's SDK is 9 or higher, there is no way to specify full platform classpath
           // because platform classes are stored in jimage binary files with unknown format.
           // Because of this we are clearing platform classpath so that javac will resolve against its own boot classpath
           // and prepending additional jars from the JDK configuration to compilation classpath
           classPath = JBIterable.from(platformCp).append(classPath).toList();
-          platformCp = Collections.emptyList();
-        }
-        else if (shouldUseReleaseOption(context, compilerSdkVersion, chunkSdkVersion, targetLanguageLevel)) {
-          final Collection<File> joined = new ArrayList<>(classPath.size() + 1);
-          for (File file : platformCp) {
-            // platform runtime classes will be handled by -release option
-            // include only additional jars from sdk distribution, e.g. tools.jar
-            if (!FileUtil.toSystemIndependentName(file.getAbsolutePath()).contains("/jre/")) {
-              joined.add(file);
-            }
-          }
-          joined.addAll(classPath);
-          classPath = joined;
           platformCp = Collections.emptyList();
         }
       }
@@ -476,7 +454,6 @@ public class JavaBuilder extends ModuleLevelBuilder {
       }
       else {
         updateCompilerUsageStatistics(context, "javac " + forkSdk.getSecond(), chunk);
-        final List<String> vmOptions = getCompilationVMOptions(context, compilingTool);
         final ExternalJavacManager server = ensureJavacServerStarted(context);
         rc = server.forkJavac(
           forkSdk.getFirst(),
@@ -496,7 +473,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     final ConcurrentMap<String, Collection<String>> map = COMPILER_USAGE_STATISTICS.get(context);
     Collection<String> names = map.get(compilerName);
     if (names == null) {
-      names = Collections.synchronizedSet(new HashSet<String>());
+      names = Collections.synchronizedSet(new HashSet<>());
       final Collection<String> prev = map.putIfAbsent(compilerName, names);
       if (prev != null) {
         names = prev;
@@ -520,19 +497,47 @@ public class JavaBuilder extends ModuleLevelBuilder {
   }
 
   @Nullable
-  public static String validateCycle(ModuleChunk chunk,
-                                     JpsJavaExtensionService javaExt,
-                                     JpsJavaCompilerConfiguration compilerConfig,
-                                     Set<JpsModule> modules) {
+  public static String validateCycle(CompileContext context, ModuleChunk chunk) {
+    final JpsJavaExtensionService javaExt = JpsJavaExtensionService.getInstance();
+    final JpsJavaCompilerConfiguration compilerConfig = javaExt.getCompilerConfiguration(context.getProjectDescriptor().getProject());
+    assert compilerConfig != null;
+    final Set<JpsModule> modules = chunk.getModules();
     Pair<String, LanguageLevel> pair = null;
     for (JpsModule module : modules) {
       final LanguageLevel moduleLevel = javaExt.getLanguageLevel(module);
       if (pair == null) {
-        pair = Pair.create(module.getName(), moduleLevel); // first value
+        pair = pair(module.getName(), moduleLevel); // first value
       }
       else if (!Comparing.equal(pair.getSecond(), moduleLevel)) {
         return "Modules " + pair.getFirst() + " and " + module.getName() +
                " must have the same language level because of cyclic dependencies between them";
+      }
+    }
+
+    final JpsJavaCompilerOptions compilerOptions = compilerConfig.getCurrentCompilerOptions();
+    final Map<String, String> overrideMap = compilerOptions.ADDITIONAL_OPTIONS_OVERRIDE;
+    if (!overrideMap.isEmpty()) {
+      // check that options are consistently overridden for all modules in the cycle
+      Pair<String, Set<String>> overridden = null;
+      for (JpsModule module : modules) {
+        final String opts = overrideMap.get(module.getName());
+        if (!StringUtil.isEmptyOrSpaces(opts)) {
+          final Set<String> parsed = parseOptions(opts);
+          if (overridden == null) {
+            overridden = pair(module.getName(), parsed);
+          }
+          else {
+            if (!overridden.second.equals(parsed)) {
+              return "Modules " + overridden.first + " and " + module.getName() + " must have the same 'additional command line parameters' specified because of cyclic dependencies between them";
+            }
+          }
+        }
+        else {
+          context.processMessage(new CompilerMessage(
+            BUILDER_NAME, BuildMessage.Kind.WARNING,
+            "Some modules with cyclic dependencies [" + chunk.getName() + "] have 'additional command line parameters' overridden in project settings.\nThese compilation options were applied to all modules in the cycle."
+          ));
+        }
       }
     }
 
@@ -548,15 +553,29 @@ public class JavaBuilder extends ModuleLevelBuilder {
     return null;
   }
 
-  private static boolean shouldUseReleaseOption(CompileContext context, int compilerVersion, int chunkSdkVersion, int targetLanguageLevel) {
-    // -release option makes sense for javac only and is supported in java9+ and higher
-    if (compilerVersion >= 9 && chunkSdkVersion > 0 && targetLanguageLevel > 0 && isJavac(COMPILING_TOOL.get(context))) {
+  private static Set<String> parseOptions(String str) {
+    final Set<String> result = new SmartHashSet<>();
+    StringTokenizer t = new StringTokenizer(str, " \n\t", false);
+    while (t.hasMoreTokens()) {
+      result.add(t.nextToken());
+    }
+    return result;
+  }
+
+  private static boolean shouldUseReleaseOption(JpsJavaCompilerConfiguration config, int compilerVersion, int chunkSdkVersion, int targetPlatformVersion) {
+    if (!config.useReleaseOption()) {
+      return false;
+    }
+    // --release option is supported in java9+ and higher
+    if (compilerVersion >= 9 && chunkSdkVersion > 0 && targetPlatformVersion > 0) {
       if (chunkSdkVersion < 9) {
         // target sdk is set explicitly and differs from compiler SDK, so for consistency we should link against it
         return false;
       }
       // chunkSdkVersion >= 9, so we have no rt.jar anymore and '-release' is the only cross-compilation option available
-      return true;
+      // Only specify '--release' when cross-compilation is indeed really required.
+      // Otherwise '--release' may not be compatible with other compilation options, e.g. exporting a package from system module
+      return compilerVersion != targetPlatformVersion;
     }
     return false;
   }
@@ -565,7 +584,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     if (!isJavac(COMPILING_TOOL.get(context))) {
       return false; // applicable to javac only
     }
-    final int compilerSdkVersion = getCompilerSdkVersion(context);
+    final int compilerSdkVersion = JavaVersion.current().feature;
 
     if (preferTargetJdkCompiler(context)) {
       final Pair<JpsSdk<JpsDummyElement>, Integer> sdkVersionPair = getAssociatedSdk(chunk);
@@ -707,62 +726,106 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
   }
 
-  private static final Key<List<String>> JAVAC_OPTIONS = Key.create("_javac_options_");
-  private static final Key<List<String>> JAVAC_VM_OPTIONS = Key.create("_javac_vm_options_");
   private static final Key<String> USER_DEFINED_BYTECODE_TARGET = Key.create("_user_defined_bytecode_target_");
 
-  private static List<String> getCompilationVMOptions(CompileContext context, JavaCompilingTool compilingTool) {
-    List<String> cached = JAVAC_VM_OPTIONS.get(context);
-    if (cached == null) {
-      loadCommonJavacOptions(context, compilingTool);
-      cached = JAVAC_VM_OPTIONS.get(context);
+  private static Pair<List<String>, List<String>> getCompilationOptions(int compilerSdkVersion,
+                                                                        CompileContext context,
+                                                                        ModuleChunk chunk,
+                                                                        @Nullable ProcessorConfigProfile profile,
+                                                                        @NotNull JavaCompilingTool compilingTool) {
+    final List<String> compilationOptions = new ArrayList<>();
+    final List<String> vmOptions = new ArrayList<>();
+    final JpsProject project = context.getProjectDescriptor().getProject();
+    final JpsJavaCompilerOptions compilerOptions = JpsJavaExtensionService.getInstance().getOrCreateCompilerConfiguration(project).getCurrentCompilerOptions();
+    if (compilerOptions.DEBUGGING_INFO) {
+      compilationOptions.add("-g");
     }
-    return cached;
-  }
-
-  private static List<String> getCompilationOptions(int compilerSdkVersion,
-                                                    CompileContext context,
-                                                    ModuleChunk chunk,
-                                                    @Nullable ProcessorConfigProfile profile,
-                                                    @NotNull JavaCompilingTool compilingTool) {
-    List<String> cached = JAVAC_OPTIONS.get(context);
-    if (cached == null) {
-      loadCommonJavacOptions(context, compilingTool);
-      cached = JAVAC_OPTIONS.get(context);
-      assert cached != null : context;
+    if (compilerOptions.DEPRECATION) {
+      compilationOptions.add("-deprecation");
     }
-
-    List<String> options = new ArrayList<>();
-    JpsModule module = chunk.representativeTarget().getModule();
-    File baseDirectory = JpsModelSerializationDataService.getBaseDirectory(module);
-    if (baseDirectory != null) {
-      //this is a temporary workaround to allow passing per-module compiler options for Eclipse compiler in form
-      // -properties $MODULE_DIR$/.settings/org.eclipse.jdt.core.prefs
-      String stringToReplace = "$" + PathMacroUtil.MODULE_DIR_MACRO_NAME + "$";
-      String moduleDirPath = FileUtil.toCanonicalPath(baseDirectory.getAbsolutePath());
-      for (String s : cached) {
-        options.add(StringUtil.replace(s, stringToReplace, moduleDirPath));
+    if (compilerOptions.GENERATE_NO_WARNINGS) {
+      compilationOptions.add("-nowarn");
+    }
+    if (compilerOptions instanceof EclipseCompilerOptions) {
+      final EclipseCompilerOptions eclipseOptions = (EclipseCompilerOptions)compilerOptions;
+      if (eclipseOptions.PROCEED_ON_ERROR) {
+        Utils.PROCEED_ON_ERROR_KEY.set(context, Boolean.TRUE);
+        compilationOptions.add("-proceedOnError");
       }
     }
-    else {
-      options.addAll(cached);
+
+    String customArgs = compilerOptions.ADDITIONAL_OPTIONS_STRING;
+    final Map<String, String> overrideMap = compilerOptions.ADDITIONAL_OPTIONS_OVERRIDE;
+    if (!overrideMap.isEmpty()) {
+      for (JpsModule m : chunk.getModules()) {
+        final String overridden = overrideMap.get(m.getName());
+        if (overridden != null) {
+          customArgs = overridden;
+          break;
+        }
+      }
     }
-    addCompilationOptions(compilerSdkVersion, options, context, chunk, profile);
-    return options;
+
+    if (customArgs != null) {
+      BiConsumer<List<String>, String> appender = List::add;
+      final JpsModule module = chunk.representativeTarget().getModule();
+      final File baseDirectory = JpsModelSerializationDataService.getBaseDirectory(module);
+      if (baseDirectory != null) {
+        //this is a temporary workaround to allow passing per-module compiler options for Eclipse compiler in form
+        // -properties $MODULE_DIR$/.settings/org.eclipse.jdt.core.prefs
+        final String moduleDirPath = FileUtil.toCanonicalPath(baseDirectory.getAbsolutePath());
+        appender = (strings, option) -> strings.add(StringUtil.replace(option, PathMacroUtil.DEPRECATED_MODULE_DIR, moduleDirPath));
+      }
+
+      boolean skip = false;
+      boolean targetOptionFound = false;
+      for (final String userOption : ParametersListUtil.parse(customArgs)) {
+        if (FILTERED_OPTIONS.contains(userOption)) {
+          skip = true;
+          targetOptionFound = "-target".equals(userOption);
+          continue;
+        }
+        if (skip) {
+          skip = false;
+          if (targetOptionFound) {
+            targetOptionFound = false;
+            USER_DEFINED_BYTECODE_TARGET.set(context, userOption);
+          }
+        }
+        else {
+          if (!FILTERED_SINGLE_OPTIONS.contains(userOption)) {
+            if (userOption.startsWith("-J-")) {
+              vmOptions.add(userOption.substring("-J".length()));
+            }
+            else {
+              appender.accept(compilationOptions, userOption);
+            }
+          }
+        }
+      }
+    }
+
+    for (ExternalJavacOptionsProvider extension : JpsServiceManager.getInstance().getExtensions(ExternalJavacOptionsProvider.class)) {
+      vmOptions.addAll(extension.getOptions(compilingTool));
+    }
+
+    addCompilationOptions(compilerSdkVersion, compilationOptions, context, chunk, profile);
+
+    return pair(vmOptions, compilationOptions);
   }
 
   public static void addCompilationOptions(List<String> options,
                                            CompileContext context,
                                            ModuleChunk chunk,
                                            @Nullable ProcessorConfigProfile profile) {
-    addCompilationOptions(getCompilerSdkVersion(context), options, context, chunk, profile);
+    addCompilationOptions(JavaVersion.current().feature, options, context, chunk, profile);
   }
 
   private static void addCompilationOptions(int compilerSdkVersion,
                                             List<String> options,
                                             CompileContext context, ModuleChunk chunk,
                                             @Nullable ProcessorConfigProfile profile) {
-    if (!isEncodingSet(options)) {
+    if (!options.contains("-encoding")) {
       final CompilerEncodingConfiguration config = context.getProjectDescriptor().getEncodingConfiguration();
       final String encoding = config.getPreferredModuleChunkEncoding(chunk);
       if (config.getAllModuleChunkEncodings(chunk).size() > 1) {
@@ -780,6 +843,13 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
 
     addCrossCompilationOptions(compilerSdkVersion, options, context, chunk);
+
+    if (!options.contains("--enable-preview")) {
+      LanguageLevel level = JpsJavaExtensionService.getInstance().getLanguageLevel(chunk.representativeTarget().getModule());
+      if (level != null && level.isPreview()) {
+        options.add("--enable-preview");
+      }
+    }
 
     if (addAnnotationProcessingOptions(options, profile)) {
       final File srcOutput = ProjectPaths.getAnnotationProcessorGeneratedSourcesOutputDir(
@@ -833,102 +903,107 @@ public class JavaBuilder extends ModuleLevelBuilder {
       context.getProjectDescriptor().getProject()
     );
 
-    final String langLevel = getLanguageLevel(chunk.getModules().iterator().next());
+    final int languageLevel = getLanguageLevel(chunk.representativeTarget().getModule());
     final int chunkSdkVersion = getChunkSdkVersion(chunk);
 
-    final int targetLanguageLevel = JpsJavaSdkType.parseVersion(langLevel);
-    if (shouldUseReleaseOption(context, compilerSdkVersion, chunkSdkVersion, targetLanguageLevel)) {
-      if (compilerSdkVersion != targetLanguageLevel) {
-        // Only specify '--release' when cross-compilation is indeed really required.
-        // Otherwise '--release' may not be compatible with other compilation options, e.g. exporting a package from system module
-        options.add("--release");
-        options.add(String.valueOf(targetLanguageLevel));
-      }
+    int bytecodeTarget = getModuleBytecodeTarget(context, chunk, compilerConfiguration, languageLevel);
+
+    if (shouldUseReleaseOption(compilerConfiguration, compilerSdkVersion, chunkSdkVersion, bytecodeTarget)) {
+      options.add("--release");
+      options.add(complianceOption(bytecodeTarget));
       return;
     }
 
     // using older -source, -target and -bootclasspath options
-    if (!StringUtil.isEmpty(langLevel)) {
+    if (languageLevel > 0) {
       options.add("-source");
-      options.add(langLevel);
+      options.add(complianceOption(languageLevel));
     }
 
-    String bytecodeTarget = null;
-    for (JpsModule module : chunk.getModules()) {
-      final String moduleTarget = compilerConfiguration.getByteCodeTargetLevel(module.getName());
-      if (moduleTarget == null) {
-        continue;
-      }
-      if (bytecodeTarget == null) {
-        bytecodeTarget = moduleTarget;
-      }
-      else {
-        if (moduleTarget.compareTo(bytecodeTarget) < 0) {
-          bytecodeTarget = moduleTarget; // use the lower possible target among modules that form the chunk
-        }
-      }
-    }
-
-    if (bytecodeTarget == null) {
-      if (!StringUtil.isEmpty(langLevel)) {
-        // according to IDEA rule: if not specified explicitly, set target to be the same as source language level
-        bytecodeTarget = langLevel;
-      }
-      else {
-        // last resort and backward compatibility:
-        // check if user explicitly defined bytecode target in additional compiler options
-        bytecodeTarget = USER_DEFINED_BYTECODE_TARGET.get(context);
-      }
-    }
-
-    if (bytecodeTarget != null) {
-      options.add("-target");
+    if (bytecodeTarget > 0) {
       if (chunkSdkVersion > 0 && compilerSdkVersion > chunkSdkVersion) {
         // if compiler is newer than module JDK
-        final int userSpecifiedTargetVersion = JpsJavaSdkType.parseVersion(bytecodeTarget);
-        if (userSpecifiedTargetVersion > 0 && userSpecifiedTargetVersion <= compilerSdkVersion) {
+        if (compilerSdkVersion >= bytecodeTarget) {
           // if user-specified bytecode version can be determined and is supported by compiler
-          if (userSpecifiedTargetVersion > chunkSdkVersion) {
+          if (bytecodeTarget > chunkSdkVersion) {
             // and user-specified bytecode target level is higher than the highest one supported by the target JDK,
             // force compiler to use highest-available bytecode target version that is supported by the chunk JDK.
-            bytecodeTarget = "1." + chunkSdkVersion;
+            bytecodeTarget = chunkSdkVersion;
           }
         }
         // otherwise let compiler display compilation error about incorrectly set bytecode target version
       }
-      options.add(bytecodeTarget);
     }
     else {
       if (chunkSdkVersion > 0 && compilerSdkVersion > chunkSdkVersion) {
-        // force lower bytecode target level to match the version of sdk assigned to this chunk
-        options.add("-target");
-        options.add("1." + chunkSdkVersion);
+        // force lower bytecode target level to match the version of the chunk JDK
+        bytecodeTarget = chunkSdkVersion;
       }
+    }
+
+    if (bytecodeTarget > 0) {
+      options.add("-target");
+      options.add(complianceOption(bytecodeTarget));
     }
   }
 
-  private static String getLanguageLevel(JpsModule module) {
+  public static int getModuleBytecodeTarget(CompileContext context, ModuleChunk chunk, JpsJavaCompilerConfiguration compilerConfiguration) {
+    return getModuleBytecodeTarget(context, chunk, compilerConfiguration, getLanguageLevel(chunk.representativeTarget().getModule()));
+  }
+  
+  private static int getModuleBytecodeTarget(CompileContext context, ModuleChunk chunk, JpsJavaCompilerConfiguration compilerConfiguration, int languageLevel) {
+    int bytecodeTarget = 0;
+    for (JpsModule module : chunk.getModules()) {
+      // use the lower possible target among modules that form the chunk
+      final int moduleTarget = JpsJavaSdkType.parseVersion(compilerConfiguration.getByteCodeTargetLevel(module.getName()));
+      if (moduleTarget > 0 && (bytecodeTarget == 0 || moduleTarget < bytecodeTarget)) {
+        bytecodeTarget = moduleTarget;
+      }
+    }
+    if (bytecodeTarget == 0) {
+      if (languageLevel > 0) {
+        // according to IDEA rule: if not specified explicitly, set target to be the same as source language level
+        bytecodeTarget = languageLevel;
+      }
+      else {
+        // last resort and backward compatibility:
+        // check if user explicitly defined bytecode target in additional compiler options
+        String value = USER_DEFINED_BYTECODE_TARGET.get(context);
+        if (value != null) {
+          bytecodeTarget = JpsJavaSdkType.parseVersion(value);
+        }
+      }
+    }
+    return bytecodeTarget;
+  }
+
+  private static String complianceOption(int major) {
+    return JpsJavaSdkType.complianceOption(JavaVersion.compose(major));
+  }
+
+  private static int getLanguageLevel(@NotNull JpsModule module) {
     final LanguageLevel level = JpsJavaExtensionService.getInstance().getLanguageLevel(module);
-    return level != null ? level.getComplianceOption() : null;
+    return level != null ? level.toJavaVersion().feature : 0;
   }
 
-  private static boolean isEncodingSet(List<String> options) {
-    for (String option : options) {
-      if ("-encoding".equals(option)) {
-        return true;
-      }
+  /**
+   * The assumed module's source code language version.
+   * Returns the version number, corresponding to the language level, associated with the given module.
+   * If no language level set (neither on module- nor on project-level), the version of JDK associated with the module is returned.
+   * If no JDK is associated, returns 0.
+   */
+  private static int getTargetPlatformLanguageVersion(@NotNull JpsModule module) {
+    final int level = getLanguageLevel(module);
+    if (level > 0) {
+      return level;
     }
-    return false;
-  }
-
-  private static int getCompilerSdkVersion(CompileContext context) {
-    final Integer cached = JAVA_COMPILER_VERSION_KEY.get(context);
-    if (cached != null) {
-      return cached;
+    // when compiling, if language level is not explicitly set, it is assumed to be equal to
+    // the highest possible language level supported by target JDK
+    final JpsSdk<JpsDummyElement> sdk = module.getSdk(JpsJavaSdkType.INSTANCE);
+    if (sdk != null) {
+      return JpsJavaSdkType.getJavaVersion(sdk);
     }
-    int javaVersion = JpsJavaSdkType.parseVersion(SystemProperties.getJavaVersion());
-    JAVA_COMPILER_VERSION_KEY.set(context, javaVersion);
-    return javaVersion;
+    return 0;
   }
 
   private static int getChunkSdkVersion(ModuleChunk chunk) {
@@ -936,8 +1011,8 @@ public class JavaBuilder extends ModuleLevelBuilder {
     for (JpsModule module : chunk.getModules()) {
       final JpsSdk<JpsDummyElement> sdk = module.getSdk(JpsJavaSdkType.INSTANCE);
       if (sdk != null) {
-        final int moduleSdkVersion = JpsJavaSdkType.parseVersion(sdk.getVersionString());
-        if (moduleSdkVersion != 0 /*could determine the version*/&& (chunkSdkVersion < 0 || chunkSdkVersion > moduleSdkVersion)) {
+        final int moduleSdkVersion = JpsJavaSdkType.getJavaVersion(sdk);
+        if (moduleSdkVersion != 0 /*could determine the version*/ && (chunkSdkVersion < 0 || chunkSdkVersion > moduleSdkVersion)) {
           chunkSdkVersion = moduleSdkVersion;
         }
       }
@@ -952,7 +1027,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
       final int sdkVersion = sdkVersionPair.second;
       if (sdkVersion >= 6 && (sdkVersion < 9 || Math.abs(sdkVersion - targetLanguageLevel) <= 3)) {
         // current javac compiler does support required language level
-        return Pair.create(sdkVersionPair.first.getHomePath(), sdkVersion);
+        return pair(sdkVersionPair.first.getHomePath(), sdkVersion);
       }
     }
     final String fallbackJdkHome = System.getProperty(GlobalOptions.FALLBACK_JDK_HOME, null);
@@ -967,11 +1042,11 @@ public class JavaBuilder extends ModuleLevelBuilder {
     }
     final int fallbackVersion = JpsJavaSdkType.parseVersion(fallbackJdkVersion);
     if (fallbackVersion < 6) {
-      LOG.info("Version string for fallback JDK is '" + fallbackJdkVersion + "' (recognized as version '" + fallbackJdkVersion + "')." +
+      LOG.info("Version string for fallback JDK is '" + fallbackJdkVersion + "' (recognized as version '" + fallbackVersion + "')." +
                " At least version 6 is required.");
       return null;
     }
-    return Pair.create(fallbackJdkHome, fallbackVersion);
+    return pair(fallbackJdkHome, fallbackVersion);
   }
 
   @Nullable
@@ -979,76 +1054,7 @@ public class JavaBuilder extends ModuleLevelBuilder {
     // assuming all modules in the chunk have the same associated JDK;
     // this constraint should be validated on build start
     final JpsSdk<JpsDummyElement> sdk = chunk.representativeTarget().getModule().getSdk(JpsJavaSdkType.INSTANCE);
-    return sdk != null? Pair.create(sdk, JpsJavaSdkType.parseVersion(sdk.getVersionString())) : null;
-  }
-
-  private static void loadCommonJavacOptions(@NotNull CompileContext context, @NotNull JavaCompilingTool compilingTool) {
-    final List<String> options = new ArrayList<>();
-
-    final JpsProject project = context.getProjectDescriptor().getProject();
-    final JpsJavaCompilerConfiguration compilerConfig = JpsJavaExtensionService.getInstance().getOrCreateCompilerConfiguration(project);
-    final JpsJavaCompilerOptions compilerOptions = compilerConfig.getCurrentCompilerOptions();
-    if (compilerOptions.DEBUGGING_INFO) {
-      options.add("-g");
-    }
-    if (compilerOptions.DEPRECATION) {
-      options.add("-deprecation");
-    }
-    if (compilerOptions.GENERATE_NO_WARNINGS) {
-      options.add("-nowarn");
-    }
-    if (compilerOptions instanceof EclipseCompilerOptions) {
-      final EclipseCompilerOptions eclipseOptions = (EclipseCompilerOptions)compilerOptions;
-      if (eclipseOptions.PROCEED_ON_ERROR) {
-        options.add("-proceedOnError");
-      }
-    }
-    final String customArgs = compilerOptions.ADDITIONAL_OPTIONS_STRING;
-    final List<String> vmOptions = new ArrayList<>();
-    if (customArgs != null) {
-      boolean skip = false;
-      boolean targetOptionFound = false;
-      for (final String userOption : ParametersListUtil.parse(customArgs)) {
-        if (FILTERED_OPTIONS.contains(userOption)) {
-          skip = true;
-          targetOptionFound = "-target".equals(userOption);
-          continue;
-        }
-        if (skip) {
-          skip = false;
-          if (targetOptionFound) {
-            targetOptionFound = false;
-            USER_DEFINED_BYTECODE_TARGET.set(context, userOption);
-          }
-        }
-        else {
-          if (!FILTERED_SINGLE_OPTIONS.contains(userOption)) {
-            if (userOption.startsWith("-J-")) {
-              vmOptions.add(userOption.substring("-J".length()));
-            }
-            else {
-              options.add(userOption);
-            }
-          }
-        }
-      }
-    }
-
-    for (ExternalJavacOptionsProvider extension : JpsServiceManager.getInstance().getExtensions(ExternalJavacOptionsProvider.class)) {
-      vmOptions.addAll(extension.getOptions(compilingTool));
-    }
-
-    if (JavaCompilers.ECLIPSE_ID.equals(compilingTool.getId())) {
-      for (String option : options) {
-        if (option.startsWith("-proceedOnError")) {
-          Utils.PROCEED_ON_ERROR_KEY.set(context, Boolean.TRUE);
-          break;
-        }
-      }
-    }
-
-    JAVAC_OPTIONS.set(context, options);
-    JAVAC_VM_OPTIONS.set(context, vmOptions);
+    return sdk != null ? pair(sdk, JpsJavaSdkType.getJavaVersion(sdk)) : null;
   }
 
   @Override
@@ -1070,12 +1076,6 @@ public class JavaBuilder extends ModuleLevelBuilder {
       map.put(outputDir, roots);
     }
     return map;
-  }
-
-  private static JavaModuleIndex getJavaModuleIndex(CompileContext context) {
-    JpsProject project = context.getProjectDescriptor().getProject();
-    File storageRoot = context.getProjectDescriptor().dataManager.getDataPaths().getDataStorageRoot();
-    return JpsJavaExtensionService.getInstance().getJavaModuleIndex(project, storageRoot);
   }
 
   private static class DiagnosticSink implements DiagnosticOutputConsumer {
